Canvas static design is fully completed. I have decided not to use fumo popup for as a login indication. Instead I want to display login request message on top meta bar. so I have deleted fumo popup section and package. Move form steo bar from bottom to left and increase over all form section width. Fixed bugs on form inputs. Remove margin 0 and paddings from dev dom body. So now developers have to add necessary spacing into their canvas during development. Make all the sections responsive on all devices. Refactor the code and add necessary documentation. So at this point we have to element designs ready. So I will start spliting them into components and so on as todo list

--- a/public/react-ts/src/canvas/multiStepForm/MultiStepForm.scss
+++ b/public/react-ts/src/canvas/multiStepForm/MultiStepForm.scss
@@ -4,38 +4,190 @@
 
 .rcncp-multi-step-form-canvas {
   .top-meta-bar {
-    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+
     p {
       display: inline;
       margin-right: 20px;
-    }
-    @media (max-width: 550px) {
-      justify-content: center;
-      align-items: center;
+
+      @media (max-width: 600px) {
+        display: block;
+      }
     }
   }
 
   .form-section {
     .form-wrapper {
-      width: 600px;
+      width: 700px;
       height: fit-content;
       margin: 50px auto;
-      background-color: $secondary-bg-color;
-      border-radius: 8px;
-      padding: 20px 40px;
+
+      @media (max-width: 600px) {
+        width: 80vw;
+      }
+
+      form {
+        display: flex;
+
+        @media (max-width: 600px) {
+          display: block;
+        }
+
+        .left-side {
+          width: 50%;
+          background-color: #304767;
+          min-height: 100%;
+          border-top-left-radius: 8px;
+          border-bottom-left-radius: 8px;
+          padding: 20px 30px;
+
+          @media (max-width: 600px) {
+            width: auto;
+            border-radius: 8px;
+            margin-bottom: 50px;
+          }
+
+          .left-heading {
+            color: #fff;
+          }
+
+          .steps-content {
+            margin-top: 30px;
+            color: #fff;
+
+            p {
+              font-size: 12px;
+              margin-top: 15px;
+            }
+          }
+
+          .progress-bar {
+            list-style: none;
+            margin-top: 30px;
+            font-size: 13px;
+            font-weight: 700;
+            counter-reset: container 0;
+            max-height: 309px;
+            overflow-y: scroll;
+
+            &::-webkit-scrollbar {
+              width: 0px;
+            }
+
+            &::-webkit-scrollbar-track {
+              bottom: 0;
+            }
+
+            &::-webkit-scrollbar-thumb {
+              background-color: #888;
+              border-radius: 6px;
+            }
+
+            li {
+              position: relative;
+              margin-left: 40px;
+              margin-top: 50px;
+              counter-increment: container 1;
+              color: #4f6581;
+
+              &::before {
+                content: counter(container);
+                line-height: 25px;
+                text-align: center;
+                position: absolute;
+                height: 25px;
+                width: 25px;
+                border: 1px solid #4f6581;
+                border-radius: 50%;
+                left: -40px;
+                top: -5px;
+                z-index: 10;
+                background-color: #304767;
+              }
+
+              &::after {
+                content: '';
+                position: absolute;
+                height: 90px;
+                width: 2px;
+                background-color: #4f6581;
+                z-index: 1;
+                left: -27px;
+                top: -70px;
+              }
+
+              &.active::after {
+                background-color: #fff;
+              }
+
+              &:first-child::after {
+                display: none;
+              }
+
+              &.active::before {
+                color: #fff;
+                border: 1px solid #fff;
+              }
+
+              &.active {
+                color: #fff;
+              }
+            }
+          }
+
+          .d-none {
+            display: none;
+          }
+        }
+
+        .right-side {
+          width: 100%;
+          padding: 30px;
+          min-height: 100%;
+          background: $secondary-bg-color;
+          border-top-right-radius: 8px;
+          border-bottom-right-radius: 8px;
+
+          @media (max-width: 600px) {
+            width: auto;
+            border-radius: 8px;
+          }
+        }
+      }
     }
   }
 
   .prev-next-button-section {
     div {
-        width: 680px;
-        margin: auto;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        button {
-            width: 200px;
+      width: 680px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 50px;
+
+      @media (max-width: 600px) {
+        width: 80vw;
+      }
+
+      button {
+        width: 200px;
+
+        @media (max-width: 400px) {
+          width: 120px !important;
         }
+
+        @media (max-width: 600px) {
+          width: 150px;
+        }
+
+        i {
+          @media (max-width: 400px) {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
